--- a/数据治理/数据权限/数据权限.md
+++ b/数据治理/数据权限/数据权限.md
@@ -8,19 +8,19 @@
 
 使用tbdsAuthorizer进行大数据组件的权限管理，可以在portal门户进行集中配置。
 
-**步骤1.**以管理员身份进入portal web，依次点击选择进入：运维中心--&gt;访问管理，如下图  
-![](/数据治理/数据权限/portal_main.png)![](/数据治理/数据权限/ranger_main.png)
+**步骤1.**以管理员身份进入portal web，依次点击选择进入：运维中心--&gt;访问管理，如下图
+![](portal_main.png)![](ranger_main.png)
 
 **步骤2.**点击要进行权限管理的服务，如hdfs则点击tdw\_hdfs,得到hdfs路径的策略列表：
 
-![](/数据治理/数据权限/ranger_tdw_hdfs.png)
+![](ranger_tdw_hdfs.png)
 
 
 
-**步骤3.**点击任意策略条目邮编的编辑按钮，进入策略详情编辑，可以指定具体的访问规则：  
-![](/数据治理/数据权限/ranger_hdfs_policy.png)
+**步骤3.**点击任意策略条目邮编的编辑按钮，进入策略详情编辑，可以指定具体的访问规则：
+![](ranger_hdfs_policy.png)
 
-### 
+###
 
 ### 查看审计日志
 
@@ -30,7 +30,7 @@
 
 **步骤2.**点击访问管理页面左侧导航栏的审计日志链接，即可查看：
 
-![](/数据治理/数据权限/ranger_audit.png)
+![](ranger_audit.png)
 
 
 
