--- a/平台运维/诊断/诊断.md
+++ b/平台运维/诊断/诊断.md
@@ -6,5 +6,6 @@
 
 下面通过常见的使用流程说明诊断的功能
 
-步骤1.打开TBDS portal，输入用户名:密码，进入主界面如下图所示
+步骤1.打开TBDS portal，输入用户名:密码，进入主界面如下图所示：  
+![](/平台运维/诊断/main_manue.png)
 
