提交组件部署，基础文件管理，监控指标操作文档

--- a/平台运维/文件管理/文件管理.md
+++ b/平台运维/文件管理/文件管理.md
@@ -1,5 +1,7 @@
 # 基础文件管理
+基础文件管理是用户在hdfs上项目根目录和用户根目录的管理入口。提供目录创建，上传文件，删除，ACL管理等功能。同时还支持历史记录查询，垃圾桶功能，保证数据的可恢复性。
 
+  ![](/平台运维/文件管理/图片/基础文件管理.png)
 
 # 上传文件管理
 上传文件管理是系统内部通过ftp协议上传文件的前端页面，系统内部的ftp协议将存储改为了hdfs，通过ftp协议直接将文件上传至hdfs。
